--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -15,22 +15,29 @@
   <body>
     <div id="map"></div>
     <div id="controls">
-        <button id="showroute" onclick="javascript:drawTrolleyPath(oMap, 'first_route');">Show Route</button>
-        <button id="hideroute" onclick="javascript:removeTrolleyPath(oMap, 'first_route');">Hide Route</button>
-        <input type="text" id="trolleytotrack" onchange="javascript:trolleyToTrack = jQuery('#trolleytotrack').val();">
+        <button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_1'); routeDisplay[1] = true;">Show Route 1</button>
+				<button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_2'); routeDisplay[2] = true;">Show Route 2</button>
+        <button id="hideroute" onclick="javascript:hideTrolleyPaths(oMap);">Hide Route</button>
+				<button id="showstops" onclick="javascript:showStops(oMap, stops); jQuery('#showstops').hide(); jQuery('#hidestops').show();">Show Stops</button>
+				<button id="hidestops" style="display: none;" onclick="javascript:hideStops(oMap, stops); jQuery('#hidestops').hide(); jQuery('#showstops').show();">Hide Stops</button>
+        Trolley#: <input type="text" size="1" id="trolleytotrack" onchange="javascript:trolleyToTrack = jQuery('#trolleytotrack').val();" value=5>
     </div>
     <div id="getupdate" style="display: none;">Checking Location...</div>
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
     <script type="text/javascript" src="/static/trolleytracker/dummydata.js"></script>
+		<script type="text/javascript" src="/static/trolleytracker/dummydata2.js"></script>
+		<script type="text/javascript" src="/static/trolleytracker/dummystops.js"></script>
     <script type="text/javascript">
       var oMap; // map object
       var currentPosMarker;
       var trolleys = {};
       var routes = {};
+			var stops = {};
+			var routeDisplay = [false, false];
       var checkTimer;
-      var trolleyToTrack = 5;
+      var trolleyToTrack = 5; //init to five because it's our test phone one, also set above
 
       function initMap(data){
         console.log("lat: " + data.lat, "lng: " + data.lng);
@@ -65,8 +72,8 @@
                 map.removeLayer(trolleys[data.who].mapMarker);
               }
 
-              console.log(data.where.lat);
-              console.log(data.where.lon);
+              //console.log(data.where.lat);
+              //console.log(data.where.lon);
               var trolleyMarker = L.AwesomeMarkers.icon({
                 icon: 'bus',
                 markerColor: 'red'
@@ -111,12 +118,51 @@
         routes[route_name] = routePolyLine;
       }
 
+			function buildStops(stoplocs) {
+				stoplocs.forEach(function(loc, index, array) {
+					var stopMarker = L.AwesomeMarkers.icon({
+						icon: 'chevron-circle-down',
+						markerColor: 'green'
+					});
+					
+					var oMapMarker = L.marker([loc.lat, loc.lon], {
+						icon: stopMarker
+					});
+
+					stops[index] = oMapMarker;
+				});
+			}
+			
+			function showStops(map, showStops) {
+				//showstops is an object that has numbered stop markers
+				//showstops.1 = marker
+				//this is because the stops don't have names yet
+
+				for (var stop in showStops) {
+					showStops[stop].addTo(map).bindPopup("<p><b>Stop #" + stop + "</b></p>");			
+				}
+			}
+			
+			function hideStops(map, hideStops) {
+				//hideStops is an object that has numbered stop markers
+				//hideStops.1 = marker
+				//this is because the stops don't have names yet
+
+				for (var stop in hideStops) {
+					map.removeLayer(hideStops[stop]);			
+				}
+			}
+	  
       function drawTrolleyPath(map, route_name) {
         routes[route_name].addTo(map);
       }
       
-      function removeTrolleyPath(map, route_name) {
-        map.removeLayer(routes[route_name]);
+      function hideTrolleyPaths(map) {
+				routeDisplay.forEach(function(route, index, array) {
+					if (route) {
+						map.removeLayer(routes['route_' + index]);
+					}
+				});
       }
       /** 
        * Attempt to geolocate the user through the browser, and, if 
@@ -127,7 +173,7 @@
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position){
             console.log(position.coords.latitude + "," + position.coords.longitude);
-            oMap.setView([position.coords.latitude, position.coords.longitude], 13);
+            oMap.setView([position.coords.latitude, position.coords.longitude], 16);
             var userPositionMarker = L.AwesomeMarkers.icon({
               icon: 'star',
               markerColor: 'green'
@@ -141,12 +187,13 @@
           });
         }
       }
-          
       
       (function($){
         
         initMap({lat: 34.852432, lng: -82.398216});
-        buildRoute(dummydata, "first_route");
+        buildRoute(dummydata, "route_1");
+				buildRoute(dummydata2, "route_2");
+				buildStops(dummystops);
         // // Provide your access token
         // L.mapbox.accessToken = 'pk.eyJ1IjoiZGFjb2hlbmlpIiwiYSI6IjM0MTIxYWI5MmU1YmQzOTA3Zjg1Y2NkYmZjM2EzZjFlIn0.3sC5DcabtrGZ72WcF0EeDA';
         // // Create a map in the div #map
