--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -26,10 +26,10 @@
     <div id="map"></div>
     <div id="controls">
         <!-- <button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_1'); routeDisplay[1] = true;">Show Route 1</button>
-				<button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_2'); routeDisplay[2] = true;">Show Route 2</button>
+        <button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_2'); routeDisplay[2] = true;">Show Route 2</button>
         <button id="hideroute" onclick="javascript:hideTrolleyPaths(oMap);">Hide Route</button> -->
-				<!-- <button id="showstops" onclick="javascript:showStops(oMap, stops); jQuery('#showstops').hide(); jQuery('#hidestops').show();">Show Stops</button>
-				<button id="hidestops" style="display: none;" onclick="javascript:hideStops(oMap, stops); jQuery('#hidestops').hide(); jQuery('#showstops').show();">Hide Stops</button> -->
+        <!-- <button id="showstops" onclick="javascript:showStops(oMap, stops); jQuery('#showstops').hide(); jQuery('#hidestops').show();">Show Stops</button>
+        <button id="hidestops" style="display: none;" onclick="javascript:hideStops(oMap, stops); jQuery('#hidestops').hide(); jQuery('#showstops').show();">Hide Stops</button> -->
         Trolley#: <input type="text" size="1" id="trolleytotrack" onchange="javascript:trolleyToTrack = jQuery('#trolleytotrack').val();" value=5>
     </div>
     <div id="getupdate" style="display: none;">Checking Location...</div>
@@ -37,15 +37,16 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
     <script type="text/javascript" src="/static/trolleytracker/dummydata.js"></script>
-		<script type="text/javascript" src="/static/trolleytracker/dummydata2.js"></script>
-		<script type="text/javascript" src="/static/trolleytracker/dummystops.js"></script>
+    <script type="text/javascript" src="/static/trolleytracker/dummydata2.js"></script>
+    <script type="text/javascript" src="/static/trolleytracker/dummystops.js"></script>
+    <script type="text/javascript" src="/static/trolleytracker/textpath/leaflet.textpath.js"></script>
     <script type="text/javascript">
       var oMap; // map object
       var currentPosMarker;
       var trolleys = {};
       var routes = {};
-			var stops = {};
-			var routeDisplay = [false, false];
+      var stops = {};
+      var routeDisplay = [false, false];
       var checkTimer;
       var trolleyToTrack = 5; //init to five because it's our test phone one, also set above
       var oMapControl = L.Control.extend({
@@ -149,20 +150,21 @@
           smoothFactor: 1
         });
 
+        routePolyLine.setText('  ►  ', {repeat: true, attributes: {fill: 'red'}});
         //store the new polyline in the routes object
         routes[route_name] = routePolyLine;
       }
 
-			function buildStops(stoplocs) {
-				stoplocs.forEach(function(loc, index, array) {
-					var stopMarker = L.divIcon({className: "trolley-stop-icon"});
-					
-					var oMapMarker = L.marker([loc.lat, loc.lon], {
-						icon: stopMarker
-					});
+      function buildStops(stoplocs) {
+        stoplocs.forEach(function(loc, index, array) {
+          var stopMarker = L.divIcon({className: "trolley-stop-icon"});
+          
+          var oMapMarker = L.marker([loc.lat, loc.lon], {
+            icon: stopMarker
+          });
 
-					stops[index] = oMapMarker;
-				});
+          stops[index] = oMapMarker;
+        });
 
         //adding in the extra stop for the alternate route
         var d = new Date();
@@ -176,38 +178,38 @@
           });
           stops[stops.length] = oMapMarker;
         }
-			}
-			
-			function showStops(map, showStops) {
-				//showstops is an object that has numbered stop markers
-				//showstops.1 = marker
-				//this is because the stops don't have names yet
+      }
+      
+      function showStops(map, showStops) {
+        //showstops is an object that has numbered stop markers
+        //showstops.1 = marker
+        //this is because the stops don't have names yet
 
-				for (var stop in showStops) {
-					showStops[stop].addTo(map).bindPopup("<p><b>Stop #" + stop + "</b></p>");			
-				}
-			}
-			
-			function hideStops(map, hideStops) {
-				//hideStops is an object that has numbered stop markers
-				//hideStops.1 = marker
-				//this is because the stops don't have names yet
+        for (var stop in showStops) {
+          showStops[stop].addTo(map).bindPopup("<p><b>Stop #" + stop + "</b></p>");     
+        }
+      }
+      
+      function hideStops(map, hideStops) {
+        //hideStops is an object that has numbered stop markers
+        //hideStops.1 = marker
+        //this is because the stops don't have names yet
 
-				for (var stop in hideStops) {
-					map.removeLayer(hideStops[stop]);			
-				}
-			}
-	  
+        for (var stop in hideStops) {
+          map.removeLayer(hideStops[stop]);     
+        }
+      }
+    
       function drawTrolleyPath(map, route_name) {
         routes[route_name].addTo(map);
       }
       
       function hideTrolleyPaths(map) {
-				routeDisplay.forEach(function(route, index, array) {
-					if (route) {
-						map.removeLayer(routes['route_' + index]);
-					}
-				});
+        routeDisplay.forEach(function(route, index, array) {
+          if (route) {
+            map.removeLayer(routes['route_' + index]);
+          }
+        });
       }
       /** 
        * Attempt to geolocate the user through the browser, and, if 
