Running from New API.  Pulling all Trolley data.

--- a/trolley/templates/trolleytracker/index.html
+++ b/trolley/templates/trolleytracker/index.html
@@ -26,10 +26,10 @@
     <div id="map"></div>
     <div id="controls">
         <!-- <button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_1'); routeDisplay[1] = true;">Show Route 1</button>
-        <button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_2'); routeDisplay[2] = true;">Show Route 2</button>
+				<button id="showroute" onclick="javascript:hideTrolleyPaths(oMap); drawTrolleyPath(oMap, 'route_2'); routeDisplay[2] = true;">Show Route 2</button>
         <button id="hideroute" onclick="javascript:hideTrolleyPaths(oMap);">Hide Route</button> -->
-        <!-- <button id="showstops" onclick="javascript:showStops(oMap, stops); jQuery('#showstops').hide(); jQuery('#hidestops').show();">Show Stops</button>
-        <button id="hidestops" style="display: none;" onclick="javascript:hideStops(oMap, stops); jQuery('#hidestops').hide(); jQuery('#showstops').show();">Hide Stops</button> -->
+				<!-- <button id="showstops" onclick="javascript:showStops(oMap, stops); jQuery('#showstops').hide(); jQuery('#hidestops').show();">Show Stops</button>
+				<button id="hidestops" style="display: none;" onclick="javascript:hideStops(oMap, stops); jQuery('#hidestops').hide(); jQuery('#showstops').show();">Hide Stops</button> -->
         Trolley#: <input type="text" size="1" id="trolleytotrack" onchange="javascript:trolleyToTrack = jQuery('#trolleytotrack').val();" value=5>
     </div>
     <div id="getupdate" style="display: none;">Checking Location...</div>
@@ -37,18 +37,16 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
     <script type="text/javascript" src="/static/trolleytracker/dummydata.js"></script>
-    <script type="text/javascript" src="/static/trolleytracker/dummydata2.js"></script>
-    <script type="text/javascript" src="/static/trolleytracker/dummystops.js"></script>
+		<script type="text/javascript" src="/static/trolleytracker/dummydata2.js"></script>
     <script type="text/javascript" src="/static/trolleytracker/textpath/leaflet.textpath.js"></script>
     <script type="text/javascript">
       var oMap; // map object
       var currentPosMarker;
-      var trolleys = {};
       var routes = {};
-      var stops = {};
-      var routeDisplay = [false, false];
+			var stops = {};
+      var trolleys = {};
+			var routeDisplay = [false, false];
       var checkTimer;
-      var trolleyToTrack = 5; //init to five because it's our test phone one, also set above
       var oMapControl = L.Control.extend({
           options: {
             position: 'topright'
@@ -63,7 +61,7 @@
 
       function initMap(data){
         //console.log("lat: " + data.lat, "lng: " + data.lng);
-        window.oMap = L.map('map').setView([data.lat, data.lng], 13);
+        window.oMap = L.map('map').setView([data.lat, data.lng], 15);
         L.AwesomeMarkers.Icon.prototype.options.prefix = 'fa';
         L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
           maxZoom: 18,
@@ -73,11 +71,11 @@
           id: 'examples.map-i875mjb7'
         }).addTo(oMap);
 
-        getTrolleyLocation(oMap, trolleyToTrack);
+        getTrolleyLocations(oMap);
         getUserLocation(oMap);
 
-        oMap.addControl(new oMapControl());
-        jQuery('.my-custom-control').append(jQuery('#controls'));
+        //oMap.addControl(new oMapControl());
+        //jQuery('.my-custom-control').append(jQuery('#controls'));
 
         var d = new Date();
         if ((d.getDay() == 0 && d.getHours() > 13 && d.getHours() < 18) ||
@@ -88,47 +86,52 @@
           drawTrolleyPath(oMap, 'route_1');
           routeDisplay[1] = true;
         }
-        showStops(oMap, stops);
+        //showStops(oMap, stops);
       }
 
-      function getTrolleyLocation(map, trolley){
+      function getTrolleyLocations(map){
         $ = jQuery;
         clearTimeout(checkTimer);
         //$('#getupdate').show();
         $.ajax({
-            url: '/trolley/update/?id=' + trolley,
+            url: '/trolley/update/',
             type: 'get',
             dataType: 'json',
+            cache: false,
             crossDomain: true,
-            success: function (data) {
+            success: function (trolleydata) {
               //console.log("success!", data);
+              trolleydata.forEach(function(data){
+                //remove existing trolley marker for the one we're updating
+                if (trolleys[data.ID] != undefined) {
+                  map.removeLayer(trolleys[data.ID].mapMarker);
+                }
 
-              //remove existing trolley marker for the one we're updating
-              if (trolleys[data.who] != undefined) {
-                map.removeLayer(trolleys[data.who].mapMarker);
-              }
+//                if (data.running) {
+                  //console.log(data.where.lat);
+                  //console.log(data.where.lon);
+                  var trolleyMarker = L.AwesomeMarkers.icon({
+                    icon: 'bus',
+                    markerColor: 'red'
+                  });
 
-              //console.log(data.where.lat);
-              //console.log(data.where.lon);   3
-              var trolleyMarker = L.AwesomeMarkers.icon({
-                icon: 'bus',
-                markerColor: 'red'
+                  var oMapMarker = L.marker([data.CurrentLat, data.CurrentLon], {
+                    icon: trolleyMarker
+                  })
+                  .addTo(map)
+                  .bindPopup("<p><b>Trolley #" + data.ID + "</b></p>");
+
+                  //add the data to the trolleys object
+                  trolleys[data.ID] = {
+                    agentData: data,
+                    mapMarker: oMapMarker
+                  };
+//                }
               });
-              var oMapMarker = L.marker([data.where.lat, data.where.lon], {
-                icon: trolleyMarker
-              })
-              .addTo(map)
-              .bindPopup("<p><b>Trolley #" + data.who + "</b><br />Last Seen " + moment(data.when).fromNow() + "</p>");
-
-              //add the data to the trolleys object
-              trolleys[data.who] = {
-                agentData: data,
-                mapMarker: oMapMarker
-              }
             },
             complete: function(data) {
               //set the next call for 5 seconds
-              checkTimer = setTimeout(function(){getTrolleyLocation(oMap, trolleyToTrack);}, 5000);
+              checkTimer = setTimeout(function(){getTrolleyLocations(oMap);}, 5000);
                //$('#getupdate').hide();
             }
           });
@@ -150,66 +153,44 @@
           smoothFactor: 1
         });
 
-        routePolyLine.setText('  ►  ', {repeat: true, attributes: {fill: 'red'}});
         //store the new polyline in the routes object
+        routePolyLine.setText('  ►  ', {repeat: true, attributes: {fill: 'red'}});
         routes[route_name] = routePolyLine;
       }
 
-      function buildStops(stoplocs) {
-        stoplocs.forEach(function(loc, index, array) {
-          var stopMarker = L.divIcon({className: "trolley-stop-icon"});
-          
-          var oMapMarker = L.marker([loc.lat, loc.lon], {
-            icon: stopMarker
-          });
+			function buildStops(stoplocs) {
+				stoplocs.forEach(function(loc, index, array) {
+					var stopMarker = L.divIcon({className: "trolley-stop-icon"});
+					
+					var oMapMarker = L.marker([loc.Lat, loc.Lon], {
+						icon: stopMarker
+					});
 
-          stops[index] = oMapMarker;
-        });
+					stops[index] = oMapMarker;
+          stops[index].addTo(oMap).bindPopup("<p><b>" + loc.Name + "</b></p>");   
+				});
+			}
+			
+			function hideStops(map, hideStops) {
+				//hideStops is an object that has numbered stop markers
+				//hideStops.1 = marker
+				//this is because the stops don't have names yet
 
-        //adding in the extra stop for the alternate route
-        var d = new Date();
-        if ((d.getDay() == 0 && d.getHours() > 13 && d.getHours() < 18) ||
-          (d.getDay() == 6 && d.getHours() > 10 && d.getHours() < 18)) {
-          
-          var stopMarker = L.divIcon({className: "trolley-stop-icon"});
-            
-          var oMapMarker = L.marker([dummystops2[0].lat, dummystops2[0].lon], {
-            icon: stopMarker
-          });
-          stops[stops.length] = oMapMarker;
-        }
-      }
-      
-      function showStops(map, showStops) {
-        //showstops is an object that has numbered stop markers
-        //showstops.1 = marker
-        //this is because the stops don't have names yet
-
-        for (var stop in showStops) {
-          showStops[stop].addTo(map).bindPopup("<p><b>Stop #" + stop + "</b></p>");     
-        }
-      }
-      
-      function hideStops(map, hideStops) {
-        //hideStops is an object that has numbered stop markers
-        //hideStops.1 = marker
-        //this is because the stops don't have names yet
-
-        for (var stop in hideStops) {
-          map.removeLayer(hideStops[stop]);     
-        }
-      }
-    
+				for (var stop in hideStops) {
+					map.removeLayer(hideStops[stop]);			
+				}
+			}
+	  
       function drawTrolleyPath(map, route_name) {
         routes[route_name].addTo(map);
       }
       
       function hideTrolleyPaths(map) {
-        routeDisplay.forEach(function(route, index, array) {
-          if (route) {
-            map.removeLayer(routes['route_' + index]);
-          }
-        });
+				routeDisplay.forEach(function(route, index, array) {
+					if (route) {
+						map.removeLayer(routes['route_' + index]);
+					}
+				});
       }
       /** 
        * Attempt to geolocate the user through the browser, and, if 
@@ -220,7 +201,7 @@
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position){
             //console.log(position.coords.latitude + "," + position.coords.longitude);
-            oMap.setView([position.coords.latitude, position.coords.longitude], 16);
+            //oMap.setView([position.coords.latitude, position.coords.longitude], 16);
             var userPositionMarker = L.AwesomeMarkers.icon({
               icon: 'star',
               markerColor: 'green'
@@ -238,15 +219,17 @@
       (function($){
         buildRoute(dummydata, "route_1");
         buildRoute(dummydata2, "route_2");
-        buildStops(dummystops);        
+        
         initMap({lat: 34.852432, lng: -82.398216});
+        buildStops(jQuery.parseJSON('{{datarequest|safe}}'));
+        getTrolleyLocations(oMap);
 
         // // Provide your access token
         // L.mapbox.accessToken = 'pk.eyJ1IjoiZGFjb2hlbmlpIiwiYSI6IjM0MTIxYWI5MmU1YmQzOTA3Zjg1Y2NkYmZjM2EzZjFlIn0.3sC5DcabtrGZ72WcF0EeDA';
         // // Create a map in the div #map
         // L.mapbox.map('map', 'mapbox.streets');
       })(jQuery);
-        
+
     </script>
   </body>
 </html>
